# build_sys

./: CMakeLists.txt  Jenkinsfile  README.md
doc/: Doxyfile
framework/: .gitignore  CMakeLists.txt
framework/include/framework/: msg.h
framework/src/: msg.cpp
framework/test/: MessageTest.cc
include/build_sys/: msg.h
sample_proj/: CMakeLists.txt
sample_proj/src/: main.cpp
scripts/: setup.sh
shape/: CMakeLists.txt
shape/include/shape/: msg.h  shape.h
shape/src/: msg.cpp  shape.cpp
shape/test/: ShapeTest.cc
src/: main.cpp  msg.cpp  shape.cpp
